--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,24 @@ jobs:
       - run: 
           name: "Run Integration Tests"
           command: npm test
+  deploy:
+    docker:
+      - image: buildpack-deps:trusty
+    steps:
+      - checkout
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 
 workflows:
   version: 2
-  build_and_integration:
+  build_integration_and_deploy:
     jobs:
       - build
-      - integration
+      - integration:
+          requires:
+            - build
+      - deploy:
+          requires:
+            - integration
