--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,16 @@ jobs:
           TERM: xterm
     steps:
       - checkout
+      # special step to restore the dependency cache
+      - restore_cache:
+          key: v2-{{ checksum "package.json" }}
       - run: npm install
+      # special step to save the dependency cache
+      - save_cache:
+          key: v2-{{ checksum "package.json" }}
+          paths:
+            - ~/.npm
+            - ~/.cache
       - run: 
           name: "Run Integration Tests"
           command: npm test
